k3s/apps/services/plex/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: services
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
      annotations: {}
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:1.23.4.4805-186bae04e
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        ports:
        - containerPort: 32400
          name: pms
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /data/tv
        - name: music
          mountPath: /data/music
        - name: movies
          mountPath: /data/movies
        - name: transcode
          mountPath: /transcode
        resources: {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-plex
      - name: transcode
        emptyDir: {}
      - name: tv
        nfs:
          server: 10.0.40.2
          path: "/mnt/vault/Media/Series"
      - name: movies
        nfs:
          server: 10.0.40.2
          path: "/mnt/vault/Media/Movies"
      - name: music
        nfs:
          server: 10.0.40.2
          path: "/mnt/vault/Media/Music"
