k3s/apps/services/plex/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: services
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.30.13
  externalTrafficPolicy: Local
  ports:
  - name: plex
    targetPort: pms
    port: 32400
  selector:
    app: plex
