k3s/apps/services/plex/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: plex
  name: plex
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-rate-limit@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: plex.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: plex.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: plex
  tls:
  - hosts:
    - plex.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
